2003-05-09  Derek Price  <derek@ximbiot.com>

	* configure.in: Back out all the S_ISSOCK changes I just made and move
	the equivalent to lib/system.h.

	* configure.in: Regenerated.
	* config.h.in: Ditto.

2003-05-09  Derek Price  <derek@ximbiot.com>

	* acinclude.m4: set cvs_client_objects in order to support optional
	compilation of src/gssapi-client.c.
	* configure.in: AC_SUBST(cvs_client_objects).
	(Original patch from Alexey Mahotkin <alexm@hsys.msk.ru>.)

	* aclocal.m4: Regenerated.
	* configure: Ditto. 
	* Makefile.in: Ditto.

2003-05-09  Derek Price  <derek@ximbiot.com>

	* configure.in: Try again, with AC_TRY_LINK this time.

	* configure: Regenerated.

2003-05-09  Derek Price  <derek@ximbiot.com>

	* configure.in: Correct a typo in my last patch.

	* configure: Regenerated.

2003-05-09  Derek Price  <derek@ximbiot.com>

	* configure.in: Add some checks for S_ISSOCK to avoid a problem on
	SCO OpenServer 5.0.6a.
	(Reported by Boyd Lynn Gerber <gerberb@zenez.com>.)

	* config.h.in: Regenerated.
	* configure: Ditto.

2003-05-07  Derek Price  <derek@ximbiot.com>

	* BUGS: Add rsh-client.{h,c} to the note that I probably just broke the
	Windows build by comitting Alexey Mahotkin's patches.

2003-05-06  Derek Price  <derek@ximbiot.com>

	* BUGS: Note that I probably just broke the Windows build by comitting
	Alexey Mahotkin's patch.

2003-05-01  Derek Price  <derek@ximbiot.com>

	* TODO (149): Remove reference to defunct RELATIVE_REPOS macro.

2003-04-30  Derek Price  <derek@ximbiot.com>

	* acinclude.m4 (ACX_WITH_GSSAPI): Get rid of $includeopt, using
	$CPPFLAGS as intended by the Autoconf folk.
	* configure.in: Ditto.
	(Original patch from Alexey Mahotkin <alexm@hsys.msk.ru>.)

	* aclocal.m4: Regenerated.
	* configure: Ditto.
	* Makefile.in: Ditto.

2003-04-30  Derek Price  <derek@ximbiot.com>

	* acinclude.m4 (ACX_WITH_GSSAPI): Fix typo in broken conditional.
	(Thanks to Alexey Mahotkin <alexm@hsys.msk.ru>.)

	* configure: Regenerated.
	* aclocal.m4: Ditto.
