@@ -265,3 +265,29 @@ when using GSSAPI.])
   AC_SEARCH_LIBS([gss_import_name], [gssapi_krb5 gssapi])
 fi
 ])dnl
+
+#
+# CVS_FUNC_PRINTF_PTR
+# -------------------
+# Determine whether printf supports %p for printing pointers.
+AC_DEFUN([CVS_FUNC_PRINTF_PTR],
+[AC_CACHE_CHECK(whether printf supports %p,
+  cvs_cv_func_printf_ptr,
+[AC_TRY_RUN([#include <stdio.h>
+/* If printf supports %p, exit 0. */
+int
+main ()
+{
+  void *p1, *p2;
+  char buf[256];
+  p1 = &p1; p2 = &p2;
+  sprintf(buf, "%p", p1);
+  exit(sscanf(buf, "%p", &p2) != 1 || p2 != p1);
+}], cvs_cv_func_printf_ptr=yes, cvs_cv_func_printf_ptr=no)
+rm -f core core.* *.core])
+if test $cvs_cv_func_printf_ptr = yes; then
+  AC_DEFINE(HAVE_PRINTF_PTR, 1,
+            [Define to 1 if the `printf' function supports the %p format
+	     for printing pointers.])
+fi
+])# CVS_FUNC_PRINTF_PTR
